<resources>
    <string name="app_name">Quitter</string>
    <string name="postedBy">Posted by:</string>
    <string name="title_activity_user_detailed">UserDetailed</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_profile_title">%s\'s profile</string>

    <string name="title_activity_login">Sign in</string>

    <string name="name">Name</string>

    <string name="password">Password</string>

    <string name="nav_home">Home</string>
    <string name="nav_mentions">Mentions</string>
    <string name="nav_my_profile">My profile</string>
    <string name="nav_following">Following</string>
    <string name="nav_search">Search</string>

    <string name="navigation_open">Open navigation</string>
    <string name="navigation_close">Close navigation</string>

    <string name="search">Search</string>

    <string name="tweet">Tweet</string>
    <string name="tweetError">Something happened while posting your tweet.</string>
    <string name="tweeted">You tweeted something!</string>

    <string name="somethingWentWrong">Something when wrong, couldn\'t perform the action.</string>

    <string name="nothingToShow">Nothing to show here</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="no_internet_connection">No internet connection</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign in</string>
    <string name="please_wait">Please wait...</string>
    <string name="logout">Log Out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
