<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home"
            android:checked="true" />

        <item
            android:id="@+id/nav_mentions"
            android:icon="@drawable/ic_notification_black_24px"
            android:title="@string/nav_mentions"
            android:checked="false" />

        <item
            android:id="@+id/nav_following"
            android:icon="@drawable/ic_following_black_24dp"
            android:title="@string/nav_following" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_my_profile" />
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
